--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
         <header class="cabecera">
             <h1>■ PROYECTO MULTIDISCIPLINAR ■</h1>
             <nav class="menu">
-                <li><a href="Calculo.html"> Calculo </li></a>
-                    <li><a href="F:\Proyecto_2\Fisica\fisica.html"> Fisica </li></a>
-                        <li><a href="F:\Proyecto_2\Ingles\Ingles.html"> Ingles </li></a>
-                            <li><a href="F:\Proyecto_2\Ecologia\Ecologia.html"> Ecologia </li></a>
-                                <li><a href="F:\Proyecto_2\Programacion\Programacion.html"> Integrantes </li></a>
+                <li><a href="calculo.html"> Calculo </li></a>
+                    <li><a href="fisica.html"> Fisica </li></a>
+                        <li><a href="ingles.html"> Ingles </li></a>
+                            <li><a href="ecologia.html"> Ecologia </li></a>
+                                <li><a href="integrantes.html"> Integrantes </li></a>
             </nav>
             <p></p>
             <aside>
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fm.facebook.com%2FCETis156PaginaOficial%2Fevents%2F&psig=AOvVaw2AXGDde6KKSa5uCEjzL456&ust=1716617730501000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNDX0sPRpYYDFQAAAAAdAAAAABAE" alt="cetis156"
+                <img src="https://tse3.mm.bing.net/th?id=OIP.jE3PCMUhGBEYM3yo267vvgHaHa&pid=Api&P=0&h=180" alt="cetis156"
                     width="150px" height="150px">
                 <center>
                     <h2><b><i>☻I N T E G R A N T E S☻</i></b></h2>
