--- a/calculo.html
+++ b/calculo.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
-            background-image: url("https://i.pinimg.com/564x/27/d8/2b/27d82b5355a8b7685a7b86b1b62835c3.jpg");
+            background-image: url("https://i.pinimg.com/564x/1b/87/96/1b87960d65f29d7b8c538a1d8428a9c4.jpg");
             background-color: rgb(250, 223, 189);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
         }
@@ -137,7 +137,7 @@
     </script>
 </body>
 <br></br>
-<a href="Proyecto_Transversal.html">
+<a href="index.html">
     <button>Ir a la página principal</button>
     <br>
 </a>
